--- a/src/components/Index/Navigation/Navigation.sass
+++ b/src/components/Index/Navigation/Navigation.sass
@@ -1,21 +1,69 @@
-#burger
-    width: 27px
-    height: 20px
-    position: relative
-    cursor: hand
+.logo
+    z-index: 99999
+    position: absolute
+    top: 20px
+    left: 20px
+    
+    
+.bm-burger-button
+    position: absolute
+    top: 20px
+    right: 20px
+    left: auto
+    width: 65px
+    height: 41px
+    padding: 7px 10px
 
-    span
-        background: black
+
+
+.bm-menu-wrap
+    width: 100%
+    background: #EC645A
+    
+
+/* Position and sizing of clickable cross button
+
+.bm-cross-button
+    height: 45px
+    width: 45px
+
+/* Color/shape of close button cross
+
+.bm-cross
+    background: black
+
+/* General sidebar styles
+
+.bm-menu
+    background: #EC645A
+    padding: 2.5em 1.5em 0
+    font-size: 1.15em
+    width: 100%
+
+/* Morph shape necessary with bubble or elastic
+
+.bm-morph-shape
+    fill: #EC645A
+
+/* Wrapper for item list
+
+.bm-item-list
+    background-color: #EC645A
+    padding: 0.8em
+
+/* Styling of overlay
+
+.bm-overlay
+    background: #EC645A
+
+.bm-cross
+    background: transparent
+    position: absolute
+
+.bm-cross-button
+    width: 45px
+    height: 45px
+
+    img
         width: 45px
-        height: 1px
-        display: block
-        position: absolute
-
-    span:first-child
-        top: 0px
-
-    span:nth-child(2)
-        top: 6px
-
-    span:nth-child(3)
-        top: 12px
+        height: 45px
