--- a/src/components/Index/Navigation/Navigation.sass
+++ b/src/components/Index/Navigation/Navigation.sass
@@ -19,6 +19,16 @@
 .bm-menu-wrap
     width: 100%
     background: #EC645A
+    font-family: "flood-std"
+
+    a
+        color: black
+        transition: all .2s
+        text-align: center
+        font-size: 36pt
+        &:hover
+            color: white
+            text-decoration: none
     
 
 /* Position and sizing of clickable cross button
