--- a/src/components/Index/Navigation/Navigation.sass
+++ b/src/components/Index/Navigation/Navigation.sass
@@ -1,10 +1,36 @@
+// Custom styles
 .logo
     z-index: 99999
     position: absolute
     top: 20px
     left: 20px
-    
-    
+
+.social
+    text-align: center
+    margin-top: 30px
+
+    span
+        margin: 7px
+
+.callme
+    font-family: "Lato"
+    text-align: center
+    color: white
+    margin-top: 20px
+
+    h3
+        font-size: 14pt
+
+    .button
+        height: 57px
+        width: 233px
+        background: white
+        color: #EC645A
+        font-size: 14pt
+        padding: 1.2rem 2.3rem
+
+// React Burger plugin styles customized
+
 .bm-burger-button
     position: absolute
     top: 20px
@@ -14,8 +40,6 @@
     height: 41px
     padding: 7px 10px
 
-
-
 .bm-menu-wrap
     width: 100%
     background: #EC645A
@@ -23,13 +47,17 @@
 
     a
         color: black
-        transition: all .2s
+        transition: all 0.2s
         text-align: center
-        font-size: 36pt
+        font-size: 26pt
+        @media (min-width: 768px)
+            font-size: 30pt
+        @media (min-width: 1200px)
+            font-size: 40pt
+
         &:hover
             color: white
             text-decoration: none
-    
 
 /* Position and sizing of clickable cross button
 
@@ -46,7 +74,6 @@
 
 .bm-menu
     background: #EC645A
-    padding: 2.5em 1.5em 0
     font-size: 1.15em
     width: 100%
 
@@ -60,6 +87,7 @@
 .bm-item-list
     background-color: #EC645A
     padding: 0.8em
+    overflow: hidden
 
 /* Styling of overlay
 
