hero style for desktop

--- a/src/components/Index/Hero/Hero.sass
+++ b/src/components/Index/Hero/Hero.sass
@@ -9,9 +9,15 @@
         font-size: 40pt
         color: #EC645A
         text-align: center
+        @media (min-width: 1200px)
+            font-size: 60pt
 
     h2
         font-size: 16pt
         color: #EC645A
         text-align: center
         margin-top: 27px
+
+        @media (min-width: 1200px)
+            br
+                display: none
