--- a/src/components/Index/Hero/Hero.sass
+++ b/src/components/Index/Hero/Hero.sass
@@ -4,6 +4,8 @@
     background: url("../../../img/hero/hero.jpg") no-repeat center center
     background-size: cover
     padding-top: 130px
+    @media (min-width: 1200px)
+        height: 800px
     h1
         font-family: "flood-std"
         font-size: 40pt
