--- a/src/components/Index/Hero/Hero.sass
+++ b/src/components/Index/Hero/Hero.sass
@@ -1,7 +1,7 @@
 .Hero
     width: 100%
     height: 600px
-    background: url("../../../img/hero/hero.jpg") no-repeat center center
+    background: url("../../../img/home/hero/hero.jpg") no-repeat center center
     background-size: cover
     padding-top: 130px
     @media (min-width: 1200px)
@@ -12,7 +12,7 @@
         color: #EC645A
         text-align: center
         @media (min-width: 1200px)
-            font-size: 60pt
+            font-size: 80pt
 
     h2
         font-size: 16pt
