--- a/src/components/Index/RoomsAndThings/RoomsAndThings.sass
+++ b/src/components/Index/RoomsAndThings/RoomsAndThings.sass
@@ -1,44 +1,22 @@
 .RoomsAndThings
-    background: black
-
+    .row
+        .col-sm-12
+            margin: 0
+            padding: 0
     a
         padding: 0
         &:hover
             text-decoration: none
-
-    .Rooms, .Things
-        width: 100%
-        height: 300px
-        position: relative
+    .gatsby-image-outer-wrapper
         background: black
-        display: flex
-        align-items: center
-        opacity: 1
-
-        
-
-        @media (min-width: 1200px)
-            height: 500px
-
-    .Rooms, .Things
-        &::before
-            position: absolute
-            top: 0
-            right: 0
-            bottom: 0
-            left: 0
-            content: ""
+        transition: all .2s
+        .gatsby-image-wrapper
             opacity: .55
-            background: url("../../../img/home/our-rooms.jpg")
-            transition: all .2s
 
         &:hover
-            &::before
-                opacity: .7
-
-    .Things
-        &::before
-            background: url("../../../img/home/things-to-do.jpg")
+            .gatsby-image-wrapper
+                opacity: 1
+                transition: all .2s
 
     h2
         font-family: "flood-std"
@@ -47,5 +25,14 @@
         text-align: center
         width: 100%
         opacity: 1
+        position: absolute
+        top: 50%
+        left: 0
+        right: 0
+        margin-top: -63px
+        @media (min-width: 1200px)
+            font-size: 60pt
+            margin-top: -96px
+            
 
         
