--- a/src/components/Index/Navigation/Navigation.sass
+++ b/src/components/Index/Navigation/Navigation.sass
@@ -28,6 +28,12 @@
         color: #EC645A
         font-size: 14pt
         padding: 1.2rem 2.3rem
+        transition: all .2s
+
+        &:hover, &:focus, &:active
+            background: transparent
+            border: 3px solid white
+            color: white
 
 // React Burger plugin styles customized
 
