--- a/src/components/Index/Contacts/Contacts.sass
+++ b/src/components/Index/Contacts/Contacts.sass
@@ -7,6 +7,7 @@
     @media (min-width: 768px)
         background: #EC645A
         height: 420px
+        margin-bottom: 0
 
     .title, .content
         display: flex
