rooms: hero + dorms + slick

--- a/src/components/Rooms/Hero/Hero.sass
+++ b/src/components/Rooms/Hero/Hero.sass
@@ -2,3 +2,7 @@
     .Hero
         background: url("../../../img/rooms/hero.jpg") no-repeat center center
         height: 500px
+
+        @media (min-width: 768px)
+            h1
+                font-size: 48pt
