--- a/src/layouts/index.sass
+++ b/src/layouts/index.sass
@@ -4,3 +4,6 @@ html, body
 
 .container-fluid
     padding: 0
+
+@import "~slick-carousel/slick/slick.css"
+@import "~slick-carousel/slick/slick-theme.css"
