stable version to test bootstrap

--- a/src/components/Rooms/DormsDescription/DormsDescription.sass
+++ b/src/components/Rooms/DormsDescription/DormsDescription.sass
@@ -1,2 +1,22 @@
 #rooms
-    .DormsDescription
+    .RoomsDescription
+        h2
+            font-family: "flood-std"
+            font-size: 26pt
+            color: #EC645A
+            text-align: center
+            width: 100%
+            margin-top: 27px
+
+        p
+            text-align: center
+
+        .callme
+            margin: 40px 0px
+            text-align: center
+
+            .button
+                padding: 1.2rem 4rem
+                
+                
+
