CODE REFACTORY: Bootstrap fixed (from 4 to 3

--- a/src/components/Index/About/About.sass
+++ b/src/components/Index/About/About.sass
@@ -1,4 +1,8 @@
 .About
+    margin: 0
+    @media (min-width: 768px)
+        display: flex
+    
     .image
         padding: 0
         margin: 0
