--- a/src/components/Index/Footer/Footer.sass
+++ b/src/components/Index/Footer/Footer.sass
@@ -2,6 +2,11 @@ footer
     border-top: 3px solid #EC645A
     display: flex
 
+    .container
+        .row
+            @media (min-width: 768px)
+                display: flex
+
     .logo
         text-align: center
         position: relative
@@ -16,6 +21,7 @@ footer
 
     .sitemap
         margin-top: 30px
+        font-size: 12pt
         
         @media (min-width: 768px)
             order: 0
