--- a/src/components/Index/RoomsAndThings/RoomsAndThings.sass
+++ b/src/components/Index/RoomsAndThings/RoomsAndThings.sass
@@ -1,8 +1,8 @@
 .RoomsAndThings
-    .row
-        .col-sm-12
-            margin: 0
-            padding: 0
+    margin: 0
+    .Rooms, .Things
+        padding-left: 0
+        padding-right: 0
     a
         padding: 0
         &:hover
@@ -33,6 +33,4 @@
         @media (min-width: 1200px)
             font-size: 60pt
             margin-top: -96px
-            
-
         
