--- a/src/components/Index/SocialAndMap/Social.sass
+++ b/src/components/Index/SocialAndMap/Social.sass
@@ -1,5 +1,11 @@
 .Social
-    border: 3px solid #EC645A
+    border-top: 3px solid #EC645A
+    border-right: 3px solid #EC645A
+    border-left: 3px solid #EC645A
+
+    .row
+        margin: 0
+        padding: 0
 
     .facebook, .tripadvisor, .instagram
         height: 250px
