--- a/src/components/Index/SocialAndMap/SocialAndMap.sass
+++ b/src/components/Index/SocialAndMap/SocialAndMap.sass
@@ -1,8 +1,11 @@
 .SocialAndMap
-    .col-sm-12
+    padding: 0
+    margin: 0
+    .SocialWrapper, .MapWrapper
         padding: 0
         margin: 0
+    
 
-    .Map
+    .Map, .Social
         padding: 0
         margin: 0
