--- a/src/components/Index/Contacts/Contacts.sass
+++ b/src/components/Index/Contacts/Contacts.sass
@@ -1,10 +1,10 @@
 .Contacts
     margin-bottom: 90px
-    display: flex
     justify-content: center
     align-items: center
     
     @media (min-width: 768px)
+        display: flex
         background: #EC645A
         height: 420px
         margin-bottom: 0
@@ -35,6 +35,7 @@
         text-align: center
         margin: 10px 0
         color: black
+        font-size: 14pt
         @media (min-width: 768px)
             color: white
 
