--- a/src/components/Index/SocialAndMap/Map.sass
+++ b/src/components/Index/SocialAndMap/Map.sass
@@ -1,11 +1,12 @@
 .Map
-    border-right: 3px solid #EC645A
-    border-bottom: 3px solid #EC645A
-    border-left: 3px solid #EC645A
+    border: 3px solid #EC645A
 
     @media (min-width: 768px)
         border-top: 3px solid #EC645A
+        border-bottom: 0px none transparent
         border-left: 0px none transparent
+
+
 
     .col-sm-12, .container
         margin: 0
