--- a/src/components/Index/Welcome/Welcome.sass
+++ b/src/components/Index/Welcome/Welcome.sass
@@ -1,6 +1,5 @@
 .Welcome
     padding: 40px
-    width: 100%
     @media (min-width: 768px)
         background: #EC645A
         padding: 80px 0
@@ -16,5 +15,6 @@
     p
         text-align: center
         margin: 0 auto
+        font-size: 14pt
         @media (min-width: 768px)
             color: white
