--- a/src/components/Rooms/Hero/Hero.sass
+++ b/src/components/Rooms/Hero/Hero.sass
@@ -2,6 +2,8 @@
     .Hero
         background: url("../../../img/rooms/hero.jpg") no-repeat center center
         height: 500px
+        background-size: cover
+        margin-bottom: 20px
 
         @media (min-width: 768px)
             h1
