rooms: rooms and house

--- a/src/components/Rooms/RoomsDescription/RoomsDescription.sass
+++ b/src/components/Rooms/RoomsDescription/RoomsDescription.sass
@@ -1,2 +1,36 @@
 #rooms
     .RoomsDescription
+        
+        h2
+            font-family: "flood-std"
+            font-size: 26pt
+            color: #EC645A
+            text-align: center
+            width: 100%
+            margin-top: 27px
+            @media (min-width: 768px)
+                text-align: left
+
+        p
+            text-align: center
+            font-size: 13pt
+            @media (min-width: 768px)
+                font-size: 14pt
+                text-align: left
+
+        .callme
+            margin: 40px 0px
+            text-align: center
+
+            .button
+                padding: 1.2rem 4rem
+
+                @media (min-width: 768px)
+                    background: #EC645A
+                    color: white
+
+                &:hover, &:focus, &:active
+                    @media (min-width: 768px)
+                        background: white
+                        color: #EC645A
+                        border: 3px solid #EC645A
