--- a/src/components/Index/RoomsAndThings/RoomsAndThings.sass
+++ b/src/components/Index/RoomsAndThings/RoomsAndThings.sass
@@ -3,6 +3,7 @@
     .Rooms, .Things
         padding-left: 0
         padding-right: 0
+        height: 540px
     a
         padding: 0
         &:hover
