fixed home page height rooms and things to do; home hero is now background css

--- a/src/components/Index/RoomsAndThings/RoomsAndThings.sass
+++ b/src/components/Index/RoomsAndThings/RoomsAndThings.sass
@@ -3,7 +3,8 @@
     .Rooms, .Things
         padding-left: 0
         padding-right: 0
-        height: 540px
+        @media (min-width: 1200px)
+            height: 540px
     a
         padding: 0
         &:hover
