--- a/src/components/Index/Hero/Hero.sass
+++ b/src/components/Index/Hero/Hero.sass
@@ -1,10 +1,11 @@
 .Hero
     height: 600px
-    background-size: cover
-    background-position: center center
     padding-top: 130px
+    background: url(../../../img/home/hero/hero.jpg) no-repeat
+    background-size: cover
     @media (min-width: 1200px)
         height: 800px
+        
     h1
         font-family: "flood-std"
         font-size: 40pt
