--- a/src/components/Index/Welcome/Welcome.sass
+++ b/src/components/Index/Welcome/Welcome.sass
@@ -1,5 +1,6 @@
 .Welcome
     padding: 40px
+    margin-top: -10px
     @media (min-width: 768px)
         background: #EC645A
         padding: 80px 0
