font replacement (end of typekit subscription)

--- a/src/components/Index/Contacts/Contacts.sass
+++ b/src/components/Index/Contacts/Contacts.sass
@@ -19,7 +19,7 @@
 
 
     h2
-        font-family: "flood-std"
+        font-family: "Permanent Marker"
         font-size: 30pt
         text-align: center
         color: #EC645A
