--- a/src/components/Index/Footer/Footer.sass
+++ b/src/components/Index/Footer/Footer.sass
@@ -47,7 +47,7 @@ footer
         margin: 40px 0px
 
         h4
-            font-family: "flood-std"
+            font-family: "Permanent Marker"
             font-size: 10pt
             color: #9B9B9B
 
