--- a/src/components/Index/Hero/Hero.sass
+++ b/src/components/Index/Hero/Hero.sass
@@ -7,7 +7,7 @@
         height: 800px
         
     h1
-        font-family: "flood-std"
+        font-family: "Permanent Marker"
         font-size: 40pt
         color: #EC645A
         text-align: center
