--- a/src/components/Index/NavigationWhite/NavigationWhite.sass
+++ b/src/components/Index/NavigationWhite/NavigationWhite.sass
@@ -56,7 +56,7 @@
 .bm-menu-wrap
     width: 100%
     background: #EC645A
-    font-family: "flood-std"
+    font-family: "Permanent Marker"
 
     a
         color: black
