--- a/src/components/Index/RoomsAndThings/RoomsAndThings.sass
+++ b/src/components/Index/RoomsAndThings/RoomsAndThings.sass
@@ -21,7 +21,7 @@
                 transition: all .2s
 
     h2
-        font-family: "flood-std"
+        font-family: "Permanent Marker"
         font-size: 40pt
         color: #EC645A
         text-align: center
