--- a/src/components/Index/Welcome/Welcome.sass
+++ b/src/components/Index/Welcome/Welcome.sass
@@ -6,7 +6,7 @@
         padding: 80px 0
 
     h2
-        font-family: "flood-std"
+        font-family: "Permanent Marker"
         color: #EC645A
         font-size: 26pt
         text-align: center
