--- a/src/components/About/Content/Content.sass
+++ b/src/components/About/Content/Content.sass
@@ -5,7 +5,7 @@
 
     .content
         h1
-            font-family: "flood-std"
+            font-family: "Permanent Marker"
             font-size: 26pt
             color: #EC645A
             text-align: center
