--- a/src/components/Index/About/About.sass
+++ b/src/components/Index/About/About.sass
@@ -13,7 +13,7 @@
         justify-content: center
 
     h2
-        font-family: "flood-std"
+        font-family: "Permanent Marker"
         font-size: 26pt
         color: #EC645A
         text-align: center
