--- a/src/components/Index/SocialAndMap/Social.sass
+++ b/src/components/Index/SocialAndMap/Social.sass
@@ -12,7 +12,7 @@
         margin: 0
         padding: 0
         text-align: center
-        font-family: "flood-std"
+        font-family: "Permanent Marker"
 
         a
             color: #EC645A
