--- a/src/components/Rooms/HouseDescription/HouseDescription.sass
+++ b/src/components/Rooms/HouseDescription/HouseDescription.sass
@@ -2,7 +2,7 @@
     .HouseDescription
         
         h2
-            font-family: "flood-std"
+            font-family: "Permanent Marker"
             font-size: 26pt
             color: #EC645A
             text-align: center
