--- a/src/components/ThingsToDo/Activity02/Activity.sass
+++ b/src/components/ThingsToDo/Activity02/Activity.sass
@@ -2,7 +2,7 @@
     .Activity
         
         h2
-            font-family: "flood-std"
+            font-family: "Permanent Marker"
             font-size: 26pt
             color: #EC645A
             text-align: center
